--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 </head>
 <body>
-    <a href="https://github.com/koraktor/metior">
+    <a href="https://github.com/koraktor/metior.heroku.com">
         <img id="github-ribbon"
              src="http://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png"
              alt="Fork me on GitHub" />
