Added a link to @metiorstats on Twitter

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,8 @@
     <div id="footer">
         © 2011 — Sebastian Staudt<br />
         Powered by <a href="http://koraktor.de/metior">Metior</a>.
+        Follow <a href="https://twitter.com/metiorstats">@metiorstats</a> on
+        Twitter.
     </div>
 </body>
 </html>
