--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
   </script>
+  <script src="https://apis.google.com/js/plusone.js" type="text/javascript"></script>
+  <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
 </head>
 <body>
     <a href="https://github.com/koraktor/metior.heroku.com">
@@ -30,6 +32,15 @@
              alt="Fork me on GitHub" />
     </a>
     <div id="header">
+        <div id="social">
+            <g:plusone href="http://metior.herokuapp.com" size="tall"></g:plusone>
+            <a href="http://twitter.com/share" class="twitter-share-button"
+               data-count="vertical"
+               data-text="Get online statistics about GitHub repositories using Metior – "
+               data-url="http://metior.herokuapp.com">
+                Tweet
+            </a>
+        </div>
         <%= link_to ('Meti%sr' % [image_tag('metior.png')]).html_safe, '/' %>
     </div>
     <div id="content">
