--- a/app/reports/heroku/templates/partials/repository_information.mustache
+++ b/app/reports/heroku/templates/partials/repository_information.mustache
@@ -6,7 +6,7 @@
     {{#description?}}
         <strong>Project description:</strong> {{description}}<br />
     {{/description?}}
-    <strong>Analyzed commit range:</strong> {{range}}<br />
+    <strong>Analyzed branch:</strong> {{range}}<br />
     <strong>Number of commits:</strong> {{commit_count}}<br />
     <strong>Initial commit date:</strong> {{initial_commit_date}}<br />
     <strong>Last commit date:</strong> {{last_commit_date}}<br />
