Added the calendar view from Metior

--- a/app/reports/heroku/templates/index.mustache
+++ b/app/reports/heroku/templates/index.mustache
@@ -1,3 +1,5 @@
+Basic stats – <a href="../{{repo_name}}/calendar">Calendar</a>
+
 <h1>Stats for <em>{{repo_name}}</em></h1>
 
 {{> repository_information}}
