--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <title><%= title %>Metior</title>
 
   <%= javascript_include_tag :all %>
+  <%= javascript_include_tag 'd3/d3.min', 'd3/d3.time.min' %>
   <%= stylesheet_link_tag :all %>
   <link rel="icon" href="<%= image_path 'favicon.png' %>" type="image/png">
   <%= csrf_meta_tag %>
