--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,17 @@
   </script>
   <script src="https://apis.google.com/js/plusone.js" type="text/javascript"></script>
   <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    /* <![CDATA[ */
+    (function() {
+        var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+        t.parentNode.insertBefore(s, t);
+    })();
+    /* ]]> */
+  </script>
 </head>
 <body>
     <a href="https://github.com/koraktor/metior.heroku.com">
@@ -40,6 +51,9 @@
                data-url="http://metior.herokuapp.com">
                 Tweet
             </a>
+            <a class="FlattrButton" style="display:none;" href="http://metior.herokuapp.com"></a>
+            <noscript><a href="http://flattr.com/thing/382588/Metior-on-Heroku" target="_blank">
+            <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
         </div>
         <%= link_to ('Meti%sr' % [image_tag('metior.png')]).html_safe, '/' %>
     </div>
