Added links to GitHub

--- a/app/reports/heroku/templates/basic_stats.mustache
+++ b/app/reports/heroku/templates/basic_stats.mustache
@@ -1,6 +1,7 @@
 Basic stats – <a href="../{{repo_name}}/calendar">Calendar</a>
 
-<h1>Stats for <em>{{repo_name}}</em></h1>
+<h1>Stats for <em><a href="https://github.com/{{repo_name}}"
+    title="Visit {{repo_name}} on GitHub">{{repo_name}}</a></em></h1>
 
 {{> repository_information}}
 {{> most_significant_authors}}
