--- a/app/reports/heroku/templates/calendar.mustache
+++ b/app/reports/heroku/templates/calendar.mustache
@@ -42,7 +42,8 @@
     .del-7 { fill: rgb(103,0,13) }
 </style>
 
-<h1>Calendar for <em>{{repo_name}}</em></h1>
+<h1>Calendar for <em><a href="https://github.com/{{repo_name}}"
+    title="Visit {{repo_name}} on GitHub">{{repo_name}}</a></em></h1>
 
 <p style="font-size: 10pt">
     The following calendar shows the history of the repository over
