--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -291,3 +291,68 @@ ul {
   list-style:    square;
   margin-bottom: 0;
 }
+
+ul#tabs {
+  height: 2.5em;
+}
+
+ul#tabs a {
+  text-decoration: none;
+  padding:         3px;
+}
+
+ul#tabs a:hover {
+  background: #f95;
+}
+
+ul#tabs li {
+  border:         2px solid #AA5;
+  border-radius:  3px;
+  display:        inline;
+  font-size:      14pt;
+  height:         16pt;
+  line-height:    16pt;
+
+  -moz-border-radius:    3px;
+  -webkit-border-radius: 3px;
+}
+
+#calendar {
+    fill: #ffb;
+    font: 9pt sans-serif;
+}
+
+.day, .month {
+    shape-rendering: crispEdges;
+}
+
+.day {
+    fill:   #ffd;
+    stroke: #ccc;
+}
+
+.month {
+    fill:         none;
+    stroke:       #000;
+    stroke-width: 2px;
+}
+
+.nothing { fill: #fff; }
+
+.add-0 { fill: rgb(229,245,224) }
+.add-1 { fill: rgb(199,233,192) }
+.add-2 { fill: rgb(161,217,155) }
+.add-3 { fill: rgb(116,196,118) }
+.add-4 { fill: rgb(65,171,93) }
+.add-5 { fill: rgb(35,139,69) }
+.add-6 { fill: rgb(0,109,44) }
+.add-7 { fill: rgb(0,68,27) }
+
+.del-0 { fill: rgb(254,224,210) }
+.del-1 { fill: rgb(252,187,161) }
+.del-2 { fill: rgb(252,146,114) }
+.del-3 { fill: rgb(251,106,74) }
+.del-4 { fill: rgb(239,59,44) }
+.del-5 { fill: rgb(203,24,29) }
+.del-6 { fill: rgb(165,15,21) }
+.del-7 { fill: rgb(103,0,13) }
