--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,10 @@
 <head>
   <title><%= title %>Metior</title>
 
-  <%= javascript_include_tag :all %>
-  <%= stylesheet_link_tag :all %>
+  <%= javascript_include_tag 'jquery.min' %>
+  <%= javascript_include_tag 'jquery_ujs' %>
+  <%= javascript_include_tag 'application' %>
+  <%= stylesheet_link_tag 'main' %>
   <link rel="icon" href="<%= image_path 'favicon.png' %>" type="image/png">
   <%= csrf_meta_tag %>
 
