Added missing d3 script links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
 <head>
   <title><%= title %>Metior</title>
 
+  <%= javascript_include_tag 'd3.min' %>
+  <%= javascript_include_tag 'd3.time.min' %>
   <%= javascript_include_tag 'jquery.min' %>
   <%= javascript_include_tag 'jquery_ujs' %>
   <%= javascript_include_tag 'application' %>
