--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
     </div>
     <div id="footer">
         © 2011 — Sebastian Staudt<br />
-        Powered by <a href="http://koraktor.de/metior">Metior</a>.
+        Powered by the <a href="http://koraktor.de/metior">Metior</a> gem.
         Follow <a href="https://twitter.com/metiorstats">@metiorstats</a> on
         Twitter.
     </div>
