--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <%= javascript_include_tag 'jquery.min' %>
   <%= javascript_include_tag 'jquery_ujs' %>
   <%= javascript_include_tag 'application' %>
-  <%= stylesheet_link_tag 'main' %>
+  <%= stylesheet_link_tag 'application' %>
   <link rel="icon" href="<%= image_path 'favicon.png' %>" type="image/png">
   <%= csrf_meta_tag %>
 
