--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,8 @@
+/*
+ *= require_self
+ *= require_directory
+ */
+
 @import url(http://fonts.googleapis.com/css?family=Bevan&v2);
 
 html {
@@ -167,14 +172,6 @@ div#footer {
   text-align:  center;
 }
 
-div#repository_information strong {
-  margin-left: 2em;
-}
-
-div#most_significant_commits th {
-  width: 85%;
-}
-
 div#tabs {
   padding: 2em 0 2px 0.5em !important;
 }
@@ -284,87 +281,3 @@ input#user {
   padding-right: 0.2em;
   text-align:    right;
 }
-
-span.add, span.del {
-  font-weight: bold;
-}
-
-table {
-  border-collapse: collapse;
-  margin:          0 auto;
-  width:           98%;
-}
-
-td:last-child {
-  text-align: right;
-}
-
-td.add {
-  color:   #090;
-  padding: 0 !important;
-}
-
-td.del {
-  color:      #a00;
-  text-align: left !important;
-}
-
-td, th {
-  padding: 0.2em;
-}
-
-th {
-  text-align: left;
-}
-
-tr:not(:last-child) {
-  border-bottom: 1px solid #652;
-}
-
-tr.even {
-  background: #521;
-}
-
-tr.odd {
-  background: #563412;
-}
-
-#calendar {
-  fill: #ffb;
-  font: 9pt sans-serif;
-}
-
-.day, .month {
-  shape-rendering: crispEdges;
-}
-
-.day {
-  fill:   #ffd;
-  stroke: #ccc;
-}
-
-.month {
-  fill:         none;
-  stroke:       #000;
-  stroke-width: 2px;
-}
-
-.nothing { fill: #fff; }
-
-.add-0 { fill: rgb(229,245,224) }
-.add-1 { fill: rgb(199,233,192) }
-.add-2 { fill: rgb(161,217,155) }
-.add-3 { fill: rgb(116,196,118) }
-.add-4 { fill: rgb(65,171,93) }
-.add-5 { fill: rgb(35,139,69) }
-.add-6 { fill: rgb(0,109,44) }
-.add-7 { fill: rgb(0,68,27) }
-
-.del-0 { fill: rgb(254,224,210) }
-.del-1 { fill: rgb(252,187,161) }
-.del-2 { fill: rgb(252,146,114) }
-.del-3 { fill: rgb(251,106,74) }
-.del-4 { fill: rgb(239,59,44) }
-.del-5 { fill: rgb(203,24,29) }
-.del-6 { fill: rgb(165,15,21) }
-.del-7 { fill: rgb(103,0,13) }
