--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -14,7 +14,7 @@
     <h2>Top projects</h2>
     <ol>
     <% Project.order_by([:analyses, :desc]).limit(10).each do |project| %>
-      <li><%= link_to project.path, project.path %></li>
+      <li><%= link_to project.path, "/#{project.path}" %></li>
     <% end %>
     </ol>
 </div>
