--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,9 @@
         <% if flash[:error] %>
             <div id="flash-error"><%= flash[:error].html_safe %></div>
         <% end %>
+        <% if flash[:notice] %>
+            <div id="flash-notice"><%= flash[:notice].html_safe %></div>
+        <% end %>
         <%= content_for?(:content) ? yield(:content) : yield %>
     </div>
     <div id="footer">
