--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -164,7 +164,7 @@ div#header div#social {
 }
 
 div#header_small div#social {
-  margin: 4em 0 0 2em;
+  margin: 4em 0 0 5.2em;
 }
 
 div#timestamp {
@@ -268,6 +268,7 @@ img#github-ribbon {
   left:     0;
   position: absolute;
   top:      0;
+  z-index:  -1;
 }
 
 input {
